Update and rename main.yml to develop.yml

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -3,7 +3,7 @@ name: Publish Gulp Docs
 on:
   push:
     branches:
-      - main  # Adjust the branch name as needed
+      - develop  # Adjust the branch name as needed
 
 jobs:
   build:
